# m_02_06

./: README.md  create_db.py  fill_data.py  pyproject.toml
db/: college.db
sql_file/: create_table.sql  query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql
